--- a/catch-the-bird-template.html
+++ b/catch-the-bird-template.html
@@ -1,41 +1,79 @@
 <html>
-    <head>
-        <title>Learn JavaScript Variable</title>
-    </head>
-     
-    <style>
-        body{
-            background-image: url("image/background.png");
-            height: 100%;
-            margin: 0, auto;
-            text-align: center;
-            cursor: url("image/crosshair.png") 50 50, auto;
+
+<head>
+    <title>Learn JavaScript Variable</title>
+</head>
+
+<style>
+    body {
+        background-image: url("image/background.png");
+        height: 100%;
+        margin: 0, auto;
+        text-align: center;
+        cursor: url("image/crosshair.png") 50 50, auto;
+    }
+
+    #player {
+        position: absolute;
+        transition: all 0, 1s;
+    }
+
+    p {
+        background-color: white;
+        color: black;
+        width: 100px;
+        height: 30px;
+        border-radius: 15px;
+        font-size: 15px;
+        border-style: none;
+        text-align: center;
+    }
+</style>
+
+<body>
+    <img width="120px" height="120px" src="image/bird.webp" id="player">
+    <p id="scoreMain">Score: <span class="scoreGame">0</span></p>
+</body>
+
+<script>
+    const showScore = document.querySelector(".scoreGame");
+    var bird = document.getElementById("player");
+    var score = 0;
+    var time = 0;
+
+    function randomMove(){
+        var x = Math.floor(Math.random() *481);
+        var y = Math.floor(Math.random() *1052);
+        bird.style.top = x+ 'px';
+        bird.style.left = y+ 'px';
+    }
+
+    var transition = setInterval(function() {
+        randomMove();
+        time = time + 1;
+        if(time == 10){
+        if(score >= 5){
+            document.body.style.backgroundImage = "url(image/win.jpg)";
+            reset();
+        }else{
+            document.body.style.backgroundImage = "url(image/lose.png)";
+            reset();
         }
+    }
+    }, 1000);
 
-        #player { 
-            position: absolute; 
-            transition: all 0,1s;
-        }
+    bird.onclick = function() {
+        score ++;
+        showScore.innerHTML  = `${score}`;
+    }
 
-        p {
-            background-color: white;
-            color: black;
-            width: 100px;
-            height: 30px;
-            border-radius: 15px;
-            font-size: 15px;
-            border-style: none;
-            text-align: center;
-        }
-    </style>
+    function reset(){
+        clearInterval(transition);
+        bird.style.display = 'none';
+        document.getElementById("scoreMain").style.display = 'none';
 
-    <body>
-       <img width="120px" height="120px" src="image/bird.webp" id="player">
-       <p id="scoreMain">Score: <span class="scoreGame">0</span></p>
-    </body>
+    }
 
-    <script >
-    
+</script>
 
-    </script>
 </html>
